--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@ main {
 /* Produtos em destaque */
 .featured-products {
   width: 100%;
+  text-align: center;
 }
 .product-grid {
   display: flex;
