primeiro css página sobre

--- a/sobre.html
+++ b/sobre.html
@@ -7,6 +7,44 @@
     <title>Sobre nós - Shoozle</title>
     <link rel="stylesheet" href="assets/style.css">
 </head>
+<style>
+    /* ==========================================
+   PÁGINA SOBRE NÓS
+   ========================================== */
+    .about-hero {
+        background: var(--bege);
+        padding: 30px 5%;
+        text-align: center;
+        width: 100%;
+    }
+
+    .about-content {
+        padding: 20px 5%;
+        width: 100%;
+        max-width: 1600px;
+        margin: 0 auto;
+    }
+
+    .about-section {
+        margin-bottom: 30px;
+        width: 100%;
+    }
+
+    .about-grid {
+        display: flex;
+        gap: 20px;
+        flex-wrap: wrap;
+        width: 100%;
+    }
+
+    .about-card {
+        flex: 1;
+        min-width: 300px;
+        border: 1px solid #ccc;
+        padding: 15px;
+    }
+</style>
+
 
 <body>
     <header>
