--- a/index.html
+++ b/index.html
@@ -22,27 +22,36 @@ main {
 .hero { 
   display: flex; 
   background: var(--bege); 
-  margin-bottom: 20px; 
+  margin-bottom: 20px;
   border: 1px solid var(--cinza);
   width: 100%;
   border-radius: 50px;
 }
-.hero-content { padding: 20px 5%; flex: 1; }
-.hero-image { 
-  background: #eee; 
-  min-height: 300px; 
-  flex: 1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 1px solid #ccc;
+.hero-content { padding: 20px 5%; }
+
+/* imagem na seção hero */
+.hero-image img {
+  max-width: 100%;
+  height:100%;
   border-radius: 50px;
 }
+
+/*  cards de produtos */
+.product-image img {
+  max-width: 100%;
+  height: auto;
+  object-fit: contain;
+  border-radius: 20px;
+}
+
+
 
 /* Produtos em destaque */
 .featured-products {
   width: 100%;
   text-align: center;
+  margin-bottom: 30px;
+
 }
 .product-grid {
   display: flex;
@@ -64,6 +73,7 @@ main {
   border-radius: 20px;
  
 }
+
 .product-image { 
   background: #eee; 
   min-height: 200px;
@@ -75,27 +85,32 @@ main {
   border-radius: 20px;
 }
 .product-tag {
-  background: var(--marrom);
-  color: white;
-  padding: 3px 8px;
-  position: absolute;
-  top: 10px;
-  right: 10px;
+    background: var(--marrom);
+    color: white;
+    padding: 3px 8px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
 }
 .price { color: var(--marrom); }
 
 /* Seção de destaque da coleção */
 .collection-highlight { 
-  display: flex; 
-  background: var(--bege); 
+    display: flex; 
+    background: var(--bege); 
   margin-bottom: 20px; 
   border: 1px solid var(--cinza);
   width: 100%;
   border-radius: 20px;
 }
+
+.price{
+text-align: center;
+}
+
 .collection-content { padding: 20px 5%; flex: 1; }
 .collection-image { 
-  background: #eee; 
+    background: #eee; 
   min-height: 300px; 
   flex: 1;
   display: flex;
@@ -104,6 +119,12 @@ main {
   border: 1px solid #ccc;
 }
 
+/* seção de destaque da coleção */
+.collection-image img {
+  max-width: 100%;
+  height: auto;
+  object-fit: contain;
+}
 </style>
 
 <body>
@@ -132,10 +153,10 @@ main {
             <article class="hero-content">
                 <h2>Os sneakers mais raros e cobiçados, direto para sua coleção.</h2>
                 <p>Cada par conta uma história. Cada modelo é uma obra de arte. Eleve seu estilo com peças exclusivas que poucos podem ter.</p>
-                <a href="#" class="cta-button">Explorar coleção</a>
+                <a href="" class="cta-button">Explorar coleção</a>
             </article>
             <figure class="hero-image">
-                <img src="" alt="">
+                <img src="assets/img/diversos/sneakers_showcase.jpg" alt="banner">
                 <figcaption class="placeholder-image"></figcaption>
             </figure>
         </section>
@@ -145,8 +166,8 @@ main {
             <section class="product-grid">
                 <article class="product-card">
                     <figure class="product-image">
-                         <img src="" alt="">
                         <figcaption class="placeholder-image"></figcaption>
+                        <img src="assets/img/snakears/TAILWIND-RED.png" alt="TAILWIND-RED">
                         <mark class="product-tag">Exclusivo</mark>
                     </figure>
                     <h3>Air Premium Limited</h3>
@@ -156,8 +177,8 @@ main {
                 
                 <article class="product-card">
                     <figure class="product-image">
-                      <img src="" alt="">
                         <figcaption class="placeholder-image"></figcaption>
+                        <img src="assets/img/snakears/ADI-2000-BRANCO.png" alt="ADI-2000-BRANCO">
                         <mark class="product-tag">Raro</mark>
                     </figure>
                     <h3>Classic Vintage 90</h3>
