Alterção da quantidade de produtos

--- a/colecao.html
+++ b/colecao.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coleção - Shoozle</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 
 <body>
@@ -69,30 +69,10 @@
                 <article class="product-card">
                     <figure class="product-image">
                         <figcaption class="placeholder-image"></figcaption>
-                        <mark class="product-tag">Colaboração</mark>
+                        <mark class="product-tag">Raro</mark>
                     </figure>
-                    <h3>Urban Designer Collab</h3>
-                    <p class="price">R$ 4.299,00</p>
-                    <a href="#" class="product-button">Ver detalhes</a>
-                </article>
-
-                <article class="product-card">
-                    <figure class="product-image">
-                        <figcaption class="placeholder-image"></figcaption>
-                        <mark class="product-tag">Clássico</mark>
-                    </figure>
-                    <h3>Retro Court 85</h3>
-                    <p class="price">R$ 1.899,00</p>
-                    <a href="#" class="product-button">Ver detalhes</a>
-                </article>
-
-                <article class="product-card">
-                    <figure class="product-image">
-                        <figcaption class="placeholder-image"></figcaption>
-                        <mark class="product-tag">Edição Limitada</mark>
-                    </figure>
-                    <h3>Premium Collector's Edition</h3>
-                    <p class="price">R$ 5.999,00</p>
+                    <h3>Classic Vintage 90</h3>
+                    <p class="price">R$ 3.799,00</p>
                     <a href="#" class="product-button">Ver detalhes</a>
                 </article>
 
