--- a/sobre.html
+++ b/sobre.html
@@ -48,25 +48,11 @@
 
 <body>
     <header>
-        <p class="announcement-bar">FRETE GRÁTIS EM COMPRAS ACIMA DE R$1.000</p>
 
         <section class="top-header">
-            <details class="search-container">
-                <summary aria-label="Buscar"></summary>
-                <form class="search-form" action="#" method="get">
-                    <input type="text" placeholder="Buscar...">
-                    <button type="submit">Buscar</button>
-                </form>
-            </details>
-
             <a href="index.html" class="logo">
                 <h1>Shoozle</h1>
             </a>
-
-            <nav class="user-nav">
-                <a href="#" class="user-link">Login</a>
-                <a href="#" class="cart-link">Carrinho</a>
-            </nav>
         </section>
 
         <nav class="main-nav">
@@ -75,11 +61,10 @@
                 <li><a href="colecao.html">Coleção</a></li>
                 <li><a href="raros.html">Raros</a></li>
                 <li><a href="sobre.html">Sobre nós</a></li>
-                <li><a href="#">Contato</a></li>
             </ul>
         </nav>
     </header>
-
+    
     <main>
         <header class="about-hero">
             <h2>Nossa História</h2>
@@ -160,8 +145,8 @@
                 <h3>Contato</h3>
                 <ul>
                     <li>contato@shoozle.com</li>
-                    <li>(11) 99999-9999</li>
-                    <li>São Paulo, SP</li>
+                    <li>(47) 99999-9999</li>
+                    <li>Bruque-SC</li>
                 </ul>
             </address>
         </section>
