--- a/sobre.html
+++ b/sobre.html
@@ -18,6 +18,10 @@
         width: 100%;
     }
 
+    .historia-paragrafo {
+        text-align: center;
+    }
+
     .about-content {
         padding: 20px 5%;
         width: 100%;
@@ -41,7 +45,15 @@
         flex: 1;
         min-width: 300px;
         border: 1px solid #ccc;
+        border-radius: 10px;
         padding: 15px;
+        text-align: center;
+    }
+
+    .about-card:hover {
+        transform: scale(1.05);
+        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
 </style>
 
@@ -64,11 +76,12 @@
             </ul>
         </nav>
     </header>
-    
+
     <main>
         <header class="about-hero">
             <h2>Nossa História</h2>
-            <p>A Shoozle nasceu da paixão por sneakers raros e da vontade de compartilhar essa cultura com verdadeiros
+            <p class="historia-paragrafo">A Shoozle nasceu da paixão por sneakers raros e da vontade de compartilhar
+                essa cultura com verdadeiros
                 entusiastas e colecionadores.</p>
         </header>
 
