alteração cor cards página sobre

--- a/sobre.html
+++ b/sobre.html
@@ -8,9 +8,6 @@
     <link rel="stylesheet" href="assets/style.css">
 </head>
 <style>
-    /* ==========================================
-   PÁGINA SOBRE NÓS
-   ========================================== */
     .about-hero {
         background: var(--bege);
         padding: 30px 5%;
@@ -42,9 +39,10 @@
     }
 
     .about-card {
+        background-color: #F5F5DC;
         flex: 1;
         min-width: 300px;
-        border: 1px solid #ccc;
+        border: 1px solid #eee;
         border-radius: 10px;
         padding: 15px;
         text-align: center;
