CSS da página de coloção

--- a/colecao.html
+++ b/colecao.html
@@ -8,6 +8,38 @@
     <link rel="stylesheet" href="assets/style.css">
 </head>
 
+<style>
+    .collection-header { 
+  background: var(--bege); 
+  padding: 30px 5%; 
+  text-align: center; 
+  width: 100%;
+}
+.filter-options {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  list-style: none;
+  margin: 20px 0;
+  flex-wrap: wrap;
+  width: 100%;
+}
+.filter-button {
+  background: white;
+  border: 1px solid #ccc;
+  padding: 5px 10px;
+  cursor: pointer;
+}
+.filter-button.active {
+  background: var(--cinza);
+  color: white;
+}
+.collection-products {
+  padding: 20px 5%;
+  width: 100%;
+}
+</style>
+
 <body>
 
     <header>
@@ -48,7 +80,9 @@
             <section class="product-grid">
                 <article class="product-card">
                     <figure class="product-image">
-                        <figcaption class="placeholder-image"></figcaption>
+                        <figcaption class="placeholder-image">
+
+                        </figcaption>
                         <mark class="product-tag">Exclusivo</mark>
                     </figure>
                     <h3>Air Premium Limited</h3>
@@ -58,7 +92,9 @@
 
                 <article class="product-card">
                     <figure class="product-image">
-                        <figcaption class="placeholder-image"></figcaption>
+                        <figcaption class="placeholder-image">
+
+                        </figcaption>
                         <mark class="product-tag">Raro</mark>
                     </figure>
                     <h3>Classic Vintage 90</h3>
@@ -68,7 +104,9 @@
 
                 <article class="product-card">
                     <figure class="product-image">
-                        <figcaption class="placeholder-image"></figcaption>
+                        <figcaption class="placeholder-image">
+
+                        </figcaption>
                         <mark class="product-tag">Raro</mark>
                     </figure>
                     <h3>Classic Vintage 90</h3>
@@ -78,7 +116,9 @@
 
                 <article class="product-card">
                     <figure class="product-image">
-                        <figcaption class="placeholder-image"></figcaption>
+                        <figcaption class="placeholder-image">
+                            
+                        </figcaption>
                         <mark class="product-tag">Exclusivo</mark>
                     </figure>
                     <h3>Street Legend Pro</h3>
