--- a/raro.html
+++ b/raro.html
@@ -6,6 +6,39 @@
     <title>Raros - Shoozle</title>
     <link rel="stylesheet" href="assets/style.css">
 </head>
+<style>
+    .rare-header { 
+  background: var(--marrom); 
+  color: white; 
+  padding: 20px 5%; 
+  text-align: center; 
+  width: 100%;
+}
+.rare-featured {
+  padding: 20px 5%;
+  width: 100%;
+  max-width: 1600px;
+  margin: 0 auto;
+}
+.rare-item {
+  display: flex;
+  margin-bottom: 30px;
+  border-bottom: 1px solid #ccc;
+  padding-bottom: 20px;
+  width: 100%;
+}
+.rare-item-image { 
+  background: #eee; 
+  min-height: 300px; 
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #ccc;
+}
+.rare-item-content { padding: 0 20px; flex: 1; }
+
+</style>
 <body>
     <header>
         <p class="announcement-bar">FRETE GRÁTIS EM COMPRAS ACIMA DE R$1.000</p>
