--- a/raros.html
+++ b/raros.html
@@ -104,8 +104,7 @@
             </article>
         </section>
     </main>
-
-    <footer>
+<footer>
         <section class="footer-content">
             <article class="footer-column">
                 <h3>Shoozle</h3>
@@ -126,13 +125,14 @@
                 <h3>Contato</h3>
                 <ul>
                     <li>contato@shoozle.com</li>
-                    <li>(11) 99999-9999</li>
-                    <li>São Paulo, SP</li>
+                    <li>(47) 99999-9999</li>
+                    <li>Bruque-SC</li>
                 </ul>
             </address>
         </section>
         
         <small class="copyright">&copy; 2025 Shoozle. Todos os direitos reservados.</small>
     </footer>
+    
 </body>
 </html>
