--- a/colecao.html
+++ b/colecao.html
@@ -9,35 +9,49 @@
 </head>
 
 <style>
-    .collection-header { 
-  background: var(--bege); 
-  padding: 30px 5%; 
-  text-align: center; 
-  width: 100%;
-}
-.filter-options {
-  display: flex;
-  justify-content: center;
-  gap: 10px;
-  list-style: none;
-  margin: 20px 0;
-  flex-wrap: wrap;
-  width: 100%;
-}
-.filter-button {
-  background: white;
-  border: 1px solid #ccc;
-  padding: 5px 10px;
-  cursor: pointer;
-}
-.filter-button.active {
-  background: var(--cinza);
-  color: white;
-}
-.collection-products {
-  padding: 20px 5%;
-  width: 100%;
-}
+    .collection-header {
+        background: var(--bege);
+        padding: 30px 5%;
+        text-align: center;
+        width: 100%;
+    }
+
+    .filter-options {
+        display: flex;
+        justify-content: center;
+        gap: 10px;
+        list-style: none;
+        margin: 20px 0;
+        flex-wrap: wrap;
+        width: 100%;
+    }
+
+    .filter-button {
+        background: white;
+        border: 1px solid #ccc;
+        padding: 5px 10px;
+        cursor: pointer;
+    }
+
+    .filter-button.active {
+        background: var(--cinza);
+        color: white;
+    }
+
+    .collection-products {
+        padding: 20px 5%;
+        width: 100%;
+    }
+
+
+    .placeholder-image img {
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .placeholder-image img:hover {
+        transform: scale(1.08);
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
+    }
 </style>
 
 <body>
@@ -81,11 +95,11 @@
                 <article class="product-card">
                     <figure class="product-image">
                         <figcaption class="placeholder-image">
-
+                            <img src="assets/img/snakears/TAILWIND-BLUE.png" alt="TAILWIND-BLUE">
                         </figcaption>
                         <mark class="product-tag">Exclusivo</mark>
                     </figure>
-                    <h3>Air Premium Limited</h3>
+                    <h3>Nike Tailwind Skepta</h3>
                     <p class="price">R$ 2.499,00</p>
                     <a href="#" class="product-button">Ver detalhes</a>
                 </article>
@@ -93,11 +107,11 @@
                 <article class="product-card">
                     <figure class="product-image">
                         <figcaption class="placeholder-image">
-
+                            <img src="assets/img/snakears/ASICS-FLOR.png" alt="ASICS-FLOR">
                         </figcaption>
-                        <mark class="product-tag">Raro</mark>
+                        <mark class="product-tag">Edição Limitada</mark>
                     </figure>
-                    <h3>Classic Vintage 90</h3>
+                    <h3>Asics Gel-NYC Cecilie Bahnsen</h3>
                     <p class="price">R$ 3.799,00</p>
                     <a href="#" class="product-button">Ver detalhes</a>
                 </article>
@@ -105,24 +119,24 @@
                 <article class="product-card">
                     <figure class="product-image">
                         <figcaption class="placeholder-image">
-
+                            <img src="assets/img/snakears/ADIDAS-BAP.png" alt="ADIDAS-BAPE">
                         </figcaption>
-                        <mark class="product-tag">Raro</mark>
+                        <mark class="product-tag">Clássico</mark>
                     </figure>
-                    <h3>Classic Vintage 90</h3>
-                    <p class="price">R$ 3.799,00</p>
+                    <h3>Adidas Forum Bape</h3>
+                    <p class="price">R$ 1.799,00</p>
                     <a href="#" class="product-button">Ver detalhes</a>
                 </article>
 
                 <article class="product-card">
                     <figure class="product-image">
                         <figcaption class="placeholder-image">
-                            
+                            <img src="assets/img/snakears/NIKE-DUNK-HIGTH.png" alt="NIKE-DUNK-BLUE">
                         </figcaption>
-                        <mark class="product-tag">Exclusivo</mark>
+                        <mark class="product-tag">Clássico</mark>
                     </figure>
-                    <h3>Street Legend Pro</h3>
-                    <p class="price">R$ 2.799,00</p>
+                    <h3>Nike Dunk High</h3>
+                    <p class="price">R$ 2.599,00</p>
                     <a href="#" class="product-button">Ver detalhes</a>
                 </article>
             </section>
