atualizacao no css

--- a/sobre.html
+++ b/sobre.html
@@ -39,7 +39,7 @@
     }
 
     .about-card {
-        background-color: #F5F5DC;
+        background-color: var(--bege);
         flex: 1;
         min-width: 300px;
         border: 1px solid #eee;
