--- a/colecao.html
+++ b/colecao.html
@@ -101,7 +101,7 @@
                     </figure>
                     <h3>Nike Tailwind Skepta</h3>
                     <p class="price">R$ 2.499,00</p>
-                    <a href="#" class="product-button">Ver detalhes</a>
+                    <a href="#" class="product-button">Reservar</a>
                 </article>
 
                 <article class="product-card">
@@ -113,7 +113,7 @@
                     </figure>
                     <h3>Asics Gel-NYC Cecilie Bahnsen</h3>
                     <p class="price">R$ 3.799,00</p>
-                    <a href="#" class="product-button">Ver detalhes</a>
+                    <a href="#" class="product-button">Reservar</a>
                 </article>
 
                 <article class="product-card">
@@ -125,7 +125,7 @@
                     </figure>
                     <h3>Adidas Forum Bape</h3>
                     <p class="price">R$ 1.799,00</p>
-                    <a href="#" class="product-button">Ver detalhes</a>
+                    <a href="#" class="product-button">Reservar</a>
                 </article>
 
                 <article class="product-card">
@@ -137,7 +137,7 @@
                     </figure>
                     <h3>Nike Dunk High</h3>
                     <p class="price">R$ 2.599,00</p>
-                    <a href="#" class="product-button">Ver detalhes</a>
+                    <a href="#" class="product-button">Reservar</a>
                 </article>
             </section>
         </section>
