--- a/colecao.html
+++ b/colecao.html
@@ -94,11 +94,11 @@
                 <article class="product-card">
                     <figure class="product-image">
                         <figcaption class="placeholder-image">
-                            <img src="assets/img/snakears/TAILWIND-BLUE.png" alt="TAILWIND-BLUE">
+                            <img src="assets/img/snakears/PUMA-SKEPTA.png" alt="PUMA-SKEPTA">
                         </figcaption>
                         <mark class="product-tag">Exclusivo</mark>
                     </figure>
-                    <h3>Nike Tailwind Skepta</h3>
+                    <h3>Puma Skepta</h3>
                     <p class="price">R$ 2.499,00</p>
                     <a href="#" class="product-button">Reservar</a>
                 </article>
