Borda e centralização de texto

--- a/colecao.html
+++ b/colecao.html
@@ -14,6 +14,11 @@
         padding: 30px 5%;
         text-align: center;
         width: 100%;
+        border-radius: 50px;
+    }
+
+    .collection-header p {
+        text-align: center;
     }
 
     .filter-options {
