alteração detalhes css pág. sobre

--- a/sobre.html
+++ b/sobre.html
@@ -9,7 +9,7 @@
 </head>
 <style>
     .about-hero {
-        background: var(--bege);
+        background: var(--marrom);
         padding: 30px 5%;
         text-align: center;
         width: 100%;
@@ -40,10 +40,9 @@
     }
 
     .about-card {
-        background-color: var(--bege);
+        background-color: var(--marrom);
         flex: 1;
         min-width: 300px;
-        border: 1px solid #eee;
         border-radius: 30px;
         padding: 15px;
         text-align: center;
