Alteração na cor do header

--- a/colecao.html
+++ b/colecao.html
@@ -10,7 +10,7 @@
 
 <style>
     .collection-header {
-        background: var(--bege);
+        background: var(--marrom);
         padding: 30px 5%;
         text-align: center;
         width: 100%;
