--- a/colecao.html
+++ b/colecao.html
@@ -90,7 +90,7 @@
                     </figure>
                     <h3>Puma Skepta</h3>
                     <p class="price">R$ 2.499,00</p>
-                    <a href="#" class="product-button">Reservar</a>
+                    <a href="reservas.html" class="product-button">Reservar</a>
                 </article>
 
                 <article class="product-card">
@@ -102,7 +102,7 @@
                     </figure>
                     <h3>Asics Gel-NYC Cecilie Bahnsen</h3>
                     <p class="price">R$ 3.799,00</p>
-                    <a href="#" class="product-button">Reservar</a>
+                    <a href="reservas.html" class="product-button">Reservar</a>
                 </article>
 
                 <article class="product-card">
@@ -114,7 +114,7 @@
                     </figure>
                     <h3>Adidas Forum Bape</h3>
                     <p class="price">R$ 1.799,00</p>
-                    <a href="#" class="product-button">Reservar</a>
+                    <a href="reservas.html" class="product-button">Reservar</a>
                 </article>
 
                 <article class="product-card">
@@ -126,7 +126,7 @@
                     </figure>
                     <h3>Nike Dunk High</h3>
                     <p class="price">R$ 2.599,00</p>
-                    <a href="#" class="product-button">Reservar</a>
+                    <a href="reservas.html" class="product-button">Reservar</a>
                 </article>
             </section>
         </section>
