--- a/raros.html
+++ b/raros.html
@@ -75,7 +75,7 @@
                     <h4>Vintage Collector's Edition</h4>
                     <p class="description">Lançado em 1992 e nunca mais reproduzido, este modelo é considerado um dos mais raros do mundo. Apenas 500 pares foram produzidos, tornando-o uma peça de museu para colecionadores.</p>
                     <p class="price">R$ 12.999,00</p>
-                    <a href="#" class="cta-button">Reservar</a>
+                    <a href="reservas.html" class="cta-button">Reservar</a>
                 </section>
             </article>
             
@@ -87,7 +87,7 @@
                     <h4>Designer Collaboration Series</h4>
                     <p class="description">Uma colaboração única entre um dos maiores designers de moda e uma marca icônica de sneakers. Materiais premium e detalhes feitos à mão tornam este par uma verdadeira obra de arte.</p>
                     <p class="price">R$ 8.499,00</p>
-                    <a href="#" class="cta-button">Reservar</a>
+                    <a href="reservas.html" class="cta-button">Reservar</a>
                 </section>
             </article>
             
@@ -99,7 +99,7 @@
                     <h4>Limited Anniversary Edition</h4>
                     <p class="description">Criado para celebrar o 30º aniversário de um dos modelos mais icônicos da história. Detalhes em ouro 18k e couro italiano de primeira qualidade fazem deste par uma peça de colecionador.</p>
                     <p class="price">R$ 15.999,00</p>
-                    <a href="#" class="cta-button">Reservar</a>
+                    <a href="reservas.html" class="cta-button">Reservar</a>
                 </section>
             </article>
         </section>
