trocas de nomes

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
                         <img src="assets/img/snakears/TAILWIND-RED.png" alt="TAILWIND-RED">
                         <mark class="product-tag">Exclusivo</mark>
                     </figure>
-                    <h3>Air Premium Limited</h3>
+                    <h3>Nike TAILWIND SKEPTA</h3>
                     <p class="price">R$ 2.499,00</p>
-                    <a href="#" class="product-button">Reservar</a>
+                    <a href="reservas.html" class="product-button">Reservar</a>
                 </article>
                 
                 <article class="product-card">
@@ -58,9 +58,9 @@
                         <img src="assets/img/snakears/ADI-2000-BRANCO.png" alt="ADI-2000-BRANCO">
                         <mark class="product-tag">Raro</mark>
                     </figure>
-                    <h3>Classic Vintage 90</h3>
+                    <h3>ADI2000 YU-GI-OH</h3>
                     <p class="price">R$ 3.799,00</p>
-                    <a href="#" class="product-button">Reservar</a>
+                    <a href="reservas.html" class="product-button">Reservar</a>
                 </article>
             </section>
         </section>
@@ -69,7 +69,7 @@
             <article class="collection-content">
                 <h2>Coleção Limitada</h2>
                 <p>Peças únicas com design exclusivo e materiais premium. Nossa coleção limitada traz o que há de mais raro no mundo dos sneakers.</p>
-                <a href="#" class="secondary-button">Conheça a coleção</a>
+                <a href="colecao.html" class="secondary-button">Conheça a coleção</a>
             </article>
         </section>
     </main>
