--- a/index.html
+++ b/index.html
@@ -26,50 +26,50 @@
     </header>
 
     <main>
-        <section class="hero">
-            <article class="hero-content">
+        <section class="banner">
+            <article class="banner-content">
                 <h2>Os sneakers mais raros e cobiçados, direto para sua coleção.</h2>
                 <p>Cada par conta uma história. Cada modelo é uma obra de arte. Eleve seu estilo com peças exclusivas que poucos podem ter.</p>
-                <a href="" class="cta-button">Explorar coleção</a>
+                <a href="colecao.html" class="cta-button">Explorar coleção</a>
             </article>
-            <figure class="hero-image">
+            <figure class="banner-image">
                 <img src="assets/img/diversos/sneakers_showcase.jpg" alt="banner">
                 <figcaption class="placeholder-image"></figcaption>
             </figure>
         </section>
 
-        <section class="featured-products">
+        <section class="apresentacao-produto">
             <h2>Destaques da Coleção</h2>
-            <section class="product-grid">
-                <article class="product-card">
-                    <figure class="product-image">
+            <section class="produto-grade">
+                <article class="produto-card">
+                    <figure class="produto-image">
                         <figcaption class="placeholder-image"></figcaption>
                         <img src="assets/img/snakears/TAILWIND-RED.png" alt="TAILWIND-RED">
-                        <mark class="product-tag">Exclusivo</mark>
+                        <mark class="produto-tag">Exclusivo</mark>
                     </figure>
                     <h3>Nike TAILWIND SKEPTA</h3>
-                    <p class="price">R$ 2.499,00</p>
-                    <a href="reservas.html" class="product-button">Reservar</a>
+                    <p class="preco">R$ 2.499,00</p>
+                    <a href="reservas.html" class="produto-button">Reservar</a>
                 </article>
                 
-                <article class="product-card">
-                    <figure class="product-image">
+                <article class="produto-card">
+                    <figure class="produto-image">
                         <figcaption class="placeholder-image"></figcaption>
                         <img src="assets/img/snakears/ADI-2000-BRANCO.png" alt="ADI-2000-BRANCO">
-                        <mark class="product-tag">Raro</mark>
+                        <mark class="produto-tag">Raro</mark>
                     </figure>
                     <h3>ADI2000 YU-GI-OH</h3>
-                    <p class="price">R$ 3.799,00</p>
-                    <a href="reservas.html" class="product-button">Reservar</a>
+                    <p class="preco">R$ 3.799,00</p>
+                    <a href="reservas.html" class="produto-button">Reservar</a>
                 </article>
             </section>
         </section>
 
-        <section class="collection-highlight">
-            <article class="collection-content">
+        <section class="colecao-destaque">
+            <article class="colecao-content">
                 <h2>Coleção Limitada</h2>
                 <p>Peças únicas com design exclusivo e materiais premium. Nossa coleção limitada traz o que há de mais raro no mundo dos sneakers.</p>
-                <a href="colecao.html" class="secondary-button">Conheça a coleção</a>
+                <a href="colecao.html" class="secundario-button">Conheça a coleção</a>
             </article>
         </section>
     </main>
