--- a/colecao.html
+++ b/colecao.html
@@ -9,7 +9,7 @@
 </head>
 
 <style>
-    .collection-header {
+    .colecao-header {
         background: var(--marrom);
         padding: 30px 5%;
         text-align: center;
@@ -17,21 +17,11 @@
         border-radius: 50px;
     }
 
-    .collection-header p {
+    .colecao-header p {
         text-align: center;
     }
 
-    .filter-options {
-        display: flex;
-        justify-content: center;
-        gap: 10px;
-        list-style: none;
-        margin: 20px 0;
-        flex-wrap: wrap;
-        width: 100%;
-    }
-
-    .collection-products {
+    .colecao-produtos {
         padding: 20px 5%;
         width: 100%;
     }
@@ -73,60 +63,60 @@
     </header>
 
     <main>
-        <header class="collection-header">
+        <header class="colecao-header">
             <h2>Nossa Coleção</h2>
             <p>Descubra os sneakers mais exclusivos do mercado, selecionados especialmente para colecionadores
                 exigentes.</p>
         </header>
 
-        <section class="collection-products">
-            <section class="product-grid">
-                <article class="product-card">
-                    <figure class="product-image">
+        <section class="colecao-produtos">
+            <section class="produto-grade">
+                <article class="produto-card">
+                    <figure class="produto-image">
                         <figcaption class="placeholder-image">
                             <img src="assets/img/snakears/PUMA-SKEPTA.png" alt="PUMA-SKEPTA">
                         </figcaption>
-                        <mark class="product-tag">Exclusivo</mark>
+                        <mark class="produto-tag">Exclusivo</mark>
                     </figure>
                     <h3>Puma Skepta</h3>
-                    <p class="price">R$ 2.499,00</p>
-                    <a href="reservas.html" class="product-button">Reservar</a>
+                    <p class="preco">R$ 2.499,00</p>
+                    <a href="reservas.html" class="produto-button">Reservar</a>
                 </article>
 
-                <article class="product-card">
-                    <figure class="product-image">
+                <article class="produto-card">
+                    <figure class="produto-image">
                         <figcaption class="placeholder-image">
                             <img src="assets/img/snakears/ASICS-FLOR.png" alt="ASICS-FLOR">
                         </figcaption>
-                        <mark class="product-tag">Edição Limitada</mark>
+                        <mark class="produto-tag">Edição Limitada</mark>
                     </figure>
                     <h3>Asics Gel-NYC Cecilie Bahnsen</h3>
-                    <p class="price">R$ 3.799,00</p>
-                    <a href="reservas.html" class="product-button">Reservar</a>
+                    <p class="preco">R$ 3.799,00</p>
+                    <a href="reservas.html" class="produto-button">Reservar</a>
                 </article>
 
-                <article class="product-card">
-                    <figure class="product-image">
+                <article class="produto-card">
+                    <figure class="produto-image">
                         <figcaption class="placeholder-image">
                             <img src="assets/img/snakears/ADIDAS-BAP.png" alt="ADIDAS-BAPE">
                         </figcaption>
-                        <mark class="product-tag">Clássico</mark>
+                        <mark class="produto-tag">Clássico</mark>
                     </figure>
                     <h3>Adidas Forum Bape</h3>
-                    <p class="price">R$ 1.799,00</p>
-                    <a href="reservas.html" class="product-button">Reservar</a>
+                    <p class="preco">R$ 1.799,00</p>
+                    <a href="reservas.html" class="produto-button">Reservar</a>
                 </article>
 
-                <article class="product-card">
-                    <figure class="product-image">
+                <article class="produto-card">
+                    <figure class="produto-image">
                         <figcaption class="placeholder-image">
                             <img src="assets/img/snakears/NIKE-DUNK-HIGTH.png" alt="NIKE-DUNK-BLUE">
                         </figcaption>
-                        <mark class="product-tag">Clássico</mark>
+                        <mark class="produto-tag">Clássico</mark>
                     </figure>
                     <h3>Nike Dunk High</h3>
-                    <p class="price">R$ 2.599,00</p>
-                    <a href="reservas.html" class="product-button">Reservar</a>
+                    <p class="preco">R$ 2.599,00</p>
+                    <a href="reservas.html" class="produto-button">Reservar</a>
                 </article>
             </section>
         </section>
