--- a/reservas.html
+++ b/reservas.html
@@ -14,7 +14,7 @@
    ========================= */
 
 /* Estilo para a seção hero da página de reservas */
-.reservation-hero {
+.reserva {
   background: var(--marrom);
   margin-bottom: 20px;
   padding: 20px 5%;
@@ -89,15 +89,15 @@
     </header>
 
     <main>
-        <section class="reservation-hero">
-            <article class="reservation-content">
+        <section class="reserva">
+            <article class="reserva-content">
                 <h2>Reserve seu Sneaker Exclusivo</h2>
                 <p>Preencha o formulário abaixo para garantir seu par de sneakers exclusivos. Nossa equipe entrará em contato para confirmar sua reserva e fornecer informações sobre pagamento e retirada.</p>
             </article>
         </section>
 
-        <section class="reservation-form-container">
-            <form class="reservation-form">
+        <section class="reserva-form-container">
+            <form class="reserva-form">
                 <fieldset>
                     <h3>Nome completo:</h3>
                     
@@ -151,11 +151,11 @@
             </form>
         </section>
 
-        <section class="collection-highlight">
-            <article class="collection-content">
+        <section class="colecao-destaque">
+            <article class="colecao-content">
                 <h2>Por que Reservar?</h2>
                 <p>Ao fazer uma reserva, você garante prioridade na compra de modelos exclusivos e raros. Nossos sneakers mais cobiçados têm estoque limitado e a reserva é a melhor forma de garantir que você não perderá aquele par dos seus sonhos.</p>
-                <a href="colecao.html" class="secondary-button">Ver mais modelos</a>
+                <a href="colecao.html" class="secundario-button">Ver mais modelos</a>
             </article>
         </section>
     </main>
