--- a/reservas.html
+++ b/reservas.html
@@ -23,7 +23,7 @@
 }
 
 /* Estilo para o container do formulário */
-.reservation-form-container {
+.reserva-form-container {
   max-width: 800px;
   margin: 0 auto 30px;
   background-color: var(--cinza);
@@ -33,7 +33,7 @@
 }
 
 /* Estilo para os fieldsets */
-.reservation-form fieldset {
+.reserva-form fieldset {
   border: 1px solid var(--grafite);
   padding: 15px;
   margin-bottom: 15px;
@@ -42,31 +42,20 @@
 }
 
 /* Estilo para os labels e inputs */
-.reservation-form label {
+.reserva-form label {
   display: block;
   margin: 10px 0 5px;
 }
 
-.reservation-form input[type="text"],
-.reservation-form input[type="email"],
-.reservation-form input[type="tel"],
-.reservation-form select,
-.reservation-form textarea {
+.reserva-form input[type="text"],
+.reserva-form input[type="email"],
+.reserva-form input[type="tel"],
+.reserva-form select,
+.reserva-form textarea {
   width: 100%;
   padding: 8px;
   border: 1px solid var(--bege);
   border-radius: 5px;
-}
-
-/* Estilo para o checkbox */
-.checkbox-container {
-  display: flex;
-  align-items: center;
-  margin: 10px 0;
-}
-
-.checkbox-container input[type="checkbox"] {
-  margin-right: 10px;
 }
 
 </style>
