--- a/sobre.html
+++ b/sobre.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="assets/style.css">
 </head>
 <style>
-    .about-hero {
+    .sobre-historia {
         background: var(--marrom);
         padding: 30px 5%;
         text-align: center;
@@ -20,26 +20,26 @@
         text-align: center;
     }
 
-    .about-content {
+    .sobre-conteudo {
         padding: 20px 5%;
         width: 100%;
         max-width: 1600px;
         margin: 0 auto;
     }
 
-    .about-section {
+    .sobre-secao {
         margin-bottom: 30px;
         width: 100%;
     }
 
-    .about-grid {
+    .grade-sobre {
         display: flex;
         gap: 20px;
         flex-wrap: wrap;
         width: 100%;
     }
 
-    .about-card {
+    .sobre-card {
         background-color: var(--marrom);
         flex: 1;
         min-width: 300px;
@@ -48,7 +48,7 @@
         text-align: center;
     }
 
-    .about-card:hover {
+    .sobre-card:hover {
         transform: scale(1.05);
         box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
         transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -75,15 +75,15 @@
     </header>
 
     <main>
-        <header class="about-hero">
+        <header class="sobre-historia">
             <h2>Nossa História</h2>
             <p class="historia-paragrafo">A Shoozle nasceu da paixão por sneakers raros e da vontade de compartilhar
                 essa cultura com verdadeiros
                 entusiastas e colecionadores.</p>
         </header>
 
-        <section class="about-content">
-            <article class="about-section">
+        <section class="sobre-conteudo">
+            <article class="sobre-secao">
                 <h3>Quem Somos</h3>
                 <p>Fundada em 2020, a Shoozle rapidamente se estabeleceu como referência no mercado de sneakers
                     exclusivos e edições limitadas. Nossa missão é conectar colecionadores a peças únicas que contam
@@ -93,26 +93,26 @@
                     rigoroso processo de verificação antes de chegar às mãos de nossos clientes.</p>
             </article>
 
-            <article class="about-section">
+            <article class="sobre-secao">
                 <h3>Nossa Filosofia</h3>
                 <p>Acreditamos que cada sneaker é mais do que um simples calçado – é uma obra de arte, um pedaço da
                     história da moda e da cultura urbana. Por isso, nos dedicamos a oferecer não apenas produtos, mas
                     experiências completas para os verdadeiros apreciadores.</p>
 
-                <section class="about-grid">
-                    <article class="about-card">
+                <section class="grade-sobre">
+                    <article class="sobre-card">
                         <h4>Exclusividade</h4>
                         <p>Trabalhamos com edições limitadas e peças raras que não são encontradas facilmente no mercado
                             convencional.</p>
                     </article>
 
-                    <article class="about-card">
+                    <article class="sobre-card">
                         <h4>Autenticidade</h4>
                         <p>Garantimos a procedência e autenticidade de cada item através de certificados e processos
                             rigorosos de verificação.</p>
                     </article>
 
-                    <article class="about-card">
+                    <article class="sobre-card">
                         <h4>Comunidade</h4>
                         <p>Fomentamos a cultura sneaker através de eventos, conteúdos exclusivos e uma comunidade ativa
                             de colecionadores.</p>
@@ -120,7 +120,7 @@
                 </section>
             </article>
 
-            <article class="about-section">
+            <article class="sobre-secao">
                 <h3>Compromisso com a Qualidade</h3>
                 <p>Na Shoozle, qualidade não é apenas uma palavra – é um compromisso diário. Cada par de sneakers passa
                     por uma inspeção detalhada antes de ser disponibilizado em nossa plataforma. Verificamos costuras,
