--- a/raros.html
+++ b/raros.html
@@ -14,6 +14,7 @@
         padding: 20px 5%;
         text-align: center;
         width: 100%;
+        border-radius: 20px;
     }
 
     .raro-destaque {
