--- a/raros.html
+++ b/raros.html
@@ -10,7 +10,6 @@
 <style>
     .raro-header{
         background: var(--marrom);
-        color: white;
         padding: 20px 5%;
         text-align: center;
         width: 100%;
@@ -27,7 +26,7 @@
     .raro-item {
         display: flex;
         margin-bottom: 30px;
-        border-bottom: 1px solid #ccc;
+        border-bottom: 1px solid black;
         padding-bottom: 20px;
         width: 100%;
     }
@@ -41,7 +40,10 @@
 
     .raro-item-content {
         padding: 0 20px;
-        flex: 1;
+        
+    }
+    .raro-header p {
+        text-align: center;
     }
 </style>
 
