--- a/reservas.html
+++ b/reservas.html
@@ -13,7 +13,7 @@
    PÁGINA DE RESERVAS 
    ========================= */
 
-/* Estilo para a seção hero da página de reservas */
+/* Estilo para página de reservas */
 .reserva {
   background: var(--marrom);
   margin-bottom: 20px;
