--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="colecao.html">Coleção</a></li>
-                <li><a href="raro.html">Raros</a></li>
+                <li><a href="raros.html">Raros</a></li>
                 <li><a href="sobre.html">Sobre nós</a></li>
             </ul>
         </nav>
